# Sketch-2-Image

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt  test.py
ddpm/: dataset.py  inference.py  requirements.txt
ddpm/dataset/: README.md
modelweights/: age.safetensors
research/: img2imgv.py  qwen_extract.py  research.md  sktch2img.py  text_gen.py
research/ddpm/: train.py
research/ddpm/models/: refiner.py
research/faceid/: encoder_iresnet.py  faceid.py  faceid_extractor.py  faceid_inference.py  inference_iresnet.py  inference_translator.py  train_encoder_cos.py  train_encoder_mse.py
test_dataset/: clean.py  dataset.md
test_dataset/LORA_clinical_desc/: 1.txt  10.txt  100.txt  101.txt  102.txt  103.txt  104.txt  105.txt  106.txt  107.txt  108.txt  109.txt  11.txt  110.txt  111.txt  112.txt  113.txt  114.txt  115.txt  116.txt  117.txt  118.txt  119.txt  12.txt  120.txt  121.txt  122.txt  123.txt  124.txt  125.txt  126.txt  127.txt  128.txt  129.txt  13.txt  130.txt  131.txt  132.txt  133.txt  134.txt  (+298 more)
test_dataset/clinical_desc/: 1.txt  10.txt  100.txt  101.txt  102.txt  103.txt  104.txt  105.txt  106.txt  107.txt  108.txt  109.txt  11.txt  110.txt  111.txt  112.txt  113.txt  114.txt  115.txt  116.txt  117.txt  118.txt  119.txt  12.txt  120.txt  121.txt  122.txt  123.txt  124.txt  125.txt  126.txt  127.txt  128.txt  129.txt  13.txt  130.txt  131.txt  132.txt  133.txt  134.txt  (+298 more)
